--- a/Source Code/src/CoI.Mod.Better.csproj
+++ b/Source Code/src/CoI.Mod.Better.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants)TRACE;CHEAT;</DefineConstants>
+    <DefineConstants>TRACETRACE;CHEAT;HAVE_LINQ;</DefineConstants>
   </PropertyGroup>
   
   <ItemGroup>
