--- a/Source Code/CoI.Mod.Better.csproj
+++ b/Source Code/CoI.Mod.Better.csproj
@@ -84,7 +84,7 @@
       <HintPath>$(COI_ROOT)\Captain of Industry_Data\Managed\Mafi.Unity.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\Downloads\Json130r1 (1)\Bin\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\Plugins\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <CopyLocal>False</CopyLocal>
