Update Research problem

--- a/Source Code/CoI.Mod.Better.csproj
+++ b/Source Code/CoI.Mod.Better.csproj
@@ -171,4 +171,8 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="UserInterface\Research\" />
+  </ItemGroup>
 </Project>
