--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 Source Code/CoI - Backup.Mod.Better.csproj
+Source Code/CoI - Backup (1).Mod.Better.csproj
