--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,7 @@ FodyWeavers.xsd
 *.sln.iml
 Source Code/CoI - Backup.Mod.Better.csproj
 Source Code/CoI - Backup (1).Mod.Better.csproj
+Source Code/.idea/.idea.CoI.Mod/.idea/.name
+Source Code/.idea/.idea.CoI.Mod/.idea/encodings.xml
+Source Code/.idea/.idea.CoI.Mod/.idea/indexLayout.xml
+Source Code/.idea/.idea.CoI.Mod/.idea/vcs.xml
