--- a/Source Code/CoI.Mod.Better.csproj
+++ b/Source Code/CoI.Mod.Better.csproj
@@ -6,6 +6,7 @@
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <Platforms>AnyCPU;x64;x86</Platforms>
         <Authors>Luxgor | K. Wehmeyer</Authors>
+        <RunPostBuildEvent>Always</RunPostBuildEvent>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
